Refactor user embassy service handling and enhance request parsing for Russian embassy services

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -19,6 +19,7 @@
         <Compile Include="endpoints\consumer\embassies\Embassies.fs" />
         <Compile Include="endpoints\consumer\embassies\RussianEmbassy.fs" />
         <Compile Include="endpoints\consumer\Router.fs" />
+        <Compile Include="services\embassies\RussianEmbassy.fs" />
         <Compile Include="services\consumer\embassies\RussianEmbassy.fs" />
         <Compile Include="services\consumer\embassies\Embassies.fs" />
         <Compile Include="services\consumer\Users.fs" />
