--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -15,15 +15,22 @@
         <Compile Include="dependencies\consumer\Users.fs" />
         <Compile Include="dependencies\producer\Producer.fs" />
         <Compile Include="dependencies\producer\embassies\RussianEmbassy.fs" />
-        <Compile Include="endpoints\consumer\Users.fs" />
-        <Compile Include="endpoints\consumer\embassies\Embassies.fs" />
-        <Compile Include="endpoints\consumer\embassies\RussianEmbassy.fs" />
+        <Compile Include="endpoints\consumer\users\Get.fs" />
+        <Compile Include="endpoints\consumer\users\Request.fs" />
+        <Compile Include="endpoints\consumer\embassies\Get.fs" />
+        <Compile Include="endpoints\consumer\embassies\Request.fs" />
+        <Compile Include="endpoints\consumer\embassies\russian\Get.fs" />
+        <Compile Include="endpoints\consumer\embassies\russian\Post.fs" />
+        <Compile Include="endpoints\consumer\embassies\russian\Request.fs" />
         <Compile Include="endpoints\consumer\Router.fs" />
-        <Compile Include="services\embassies\RussianEmbassy.fs" />
-        <Compile Include="services\consumer\embassies\RussianEmbassy.fs" />
-        <Compile Include="services\consumer\embassies\Embassies.fs" />
-        <Compile Include="services\consumer\Users.fs" />
-        <Compile Include="services\producer\embassies\RussianEmbassy.fs" />
+        <Compile Include="services\embassies\russian\Service.fs" />
+        <Compile Include="services\consumer\embassies\russian\kdmid\Query.fs" />
+        <Compile Include="services\consumer\embassies\russian\kdmid\Command.fs" />
+        <Compile Include="services\consumer\embassies\russian\midpass\Query.fs" />
+        <Compile Include="services\consumer\embassies\russian\Service.fs" />
+        <Compile Include="services\consumer\embassies\Service.fs" />
+        <Compile Include="services\consumer\users\Service.fs" />
+        <Compile Include="services\producer\embassies\russian\Service.fs" />
         <Compile Include="controllers\consumer\Users.fs" />
         <Compile Include="controllers\consumer\embassies\Embassies.fs" />
         <Compile Include="controllers\consumer\embassies\RussianEmbassy.fs" />
