--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -11,7 +11,7 @@
         <Compile Include="domain\RouteNode.fs" />
         <Compile Include="dependencies\Web.fs" />
         <Compile Include="dependencies\Persistence.fs" />
-        <Compile Include="dependencies\Russian.fs" />
+        <Compile Include="dependencies\embassies\Russian.fs" />
         <Compile Include="embassies\Russian.fs"/>
         <Compile Include="Initializer.fs"/>
         <Compile Include="Program.fs"/>
