--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -10,7 +10,7 @@ Persistence:
 SearchAppointments: &SearchAppointments
   - Id: SA
     Name: Search appointments
-    Enabled: true
+    Enabled: false
     Wait: false
     Duration: 00:01:00
 
@@ -24,22 +24,25 @@ Worker:
     - Id: RU
       Name: Russian
       Parallel: true
-      Recursively: 00:01:00
       Schedule:
-        StartTime: 04:00:00
-        StopTime: 16:30:00
         Workdays: mon,tue,wed,thu,fri,sat,sun
       Tasks:
         - Id: SRB
           Name: Serbia
           Parallel: true
+          Recursively: 00:01:00
           Tasks:
             - Id: BG
               Name: Belgrade
               Parallel: true
               Tasks:
-                <<: *SearchAppointments
+                - Id: SA
+                  Name: Search appointments
+                  Enabled: true
+                  Duration: 00:01:00
               Schedule:
+                StartTime: 09:00:00
+                StopTime: 20:30:00
                 TimeZone: 1
         - Id: GER
           Name: Germany
