Update appsettings and Russian embassy handling: adjust recursion timing, enhance task structure, and refine message formatting

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -30,7 +30,7 @@ Worker:
         - Id: SRB
           Name: Serbia
           Parallel: true
-          Recursively: 00:30:00
+          Recursively: 00:01:00
           Tasks:
             - Id: BEG
               Name: Belgrade
@@ -43,17 +43,24 @@ Worker:
               Schedule:
                 StartTime: 09:00:00
                 StopTime: 17:00:00
+                StopDate: 2025-01-20
                 TimeZone: 1
         - Id: DEU
           Name: Germany
           Parallel: true
+          Recursively: 00:01:00
           Tasks:
             - Id: BER
               Name: Berlin
               Parallel: true
               Tasks:
-                <<: *SearchAppointments
+                - Id: SA
+                  Name: Search appointments
+                  Enabled: true
+                  Duration: 00:01:00
               Schedule:
+                StartTime: 09:00:00
+                StopTime: 23:00:00
                 TimeZone: 1
         - Id: FRA
           Name: France
