Update submodule branches to 'dev' and adjust appointment settings in appsettings.yaml

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -30,7 +30,7 @@ Worker:
         - Id: SRB
           Name: Serbia
           Parallel: true
-          Recursively: 00:30:00
+          Recursively: 00:01:00
           Tasks:
             - Id: BEG
               Name: Belgrade
@@ -38,7 +38,7 @@ Worker:
               Tasks:
                 - Id: SA
                   Name: Search appointments
-                  Enabled: true
+                  Enabled: false
                   Duration: 00:01:00
               Schedule:
                 StartTime: 09:00:00
@@ -47,7 +47,7 @@ Worker:
         - Id: DEU
           Name: Germany
           Parallel: true
-          Recursively: 00:30:00
+          Recursively: 00:01:00
           Tasks:
             - Id: BER
               Name: Berlin
@@ -58,8 +58,8 @@ Worker:
                   Enabled: true
                   Duration: 00:01:00
               Schedule:
-                StartTime: 09:00:00
-                StopTime: 17:00:00
+                StartTime: 00:00:00
+                StopTime: 23:59:00
                 TimeZone: 1
         - Id: FRA
           Name: France
