Refactor Kdmid module: simplify error handling in order processing and adjust return types for clarity

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -5,7 +5,7 @@ Logging:
     Default: Debug
 
 Persistence:
-  FileSystem: /usr/src/embassy-access-data
+  FileSystem: ../../../data
 
 SearchAppointments: &SearchAppointments
   - Id: SA
