Enable search appointments task in embassy access worker configuration

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -37,7 +37,7 @@ Worker:
               Tasks:
                 - Id: SA
                   Name: Search appointments
-                  Enabled: false
+                  Enabled: true
                   Duration: 00:01:00
               Schedule:
                 StartTime: 08:30:00
