--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -25,12 +25,12 @@ Worker:
       Name: Russian
       Parallel: true
       Schedule:
-        Workdays: mon,tue,wed,thu,fri
+        Workdays: mon,tue,wed,thu
       Tasks:
         - Id: SRB
           Name: Serbia
           Parallel: true
-          Recursively: 00:01:00
+          Recursively: 00:00:05
           Tasks:
             - Id: BEG
               Name: Belgrade
@@ -40,24 +40,22 @@ Worker:
                   Enabled: true
                   Duration: 00:01:00
               Schedule:
-                StartTime: 08:30:00
-                StopTime: 23:00:00
+                StartDate: 2025-01-31
+                StartTime: 02:55:00
+                StopTime: 02:56:10
                 TimeZone: 1
         - Id: DEU
           Name: Germany
           Parallel: true
-          Recursively: 00:01:00
           Tasks:
             - Id: BER
               Name: Berlin
               Tasks:
                 - Id: SA
                   Name: Search appointments
-                  Enabled: true
+                  Enabled: false
                   Duration: 00:01:00
               Schedule:
-                StartTime: 08:30:00
-                StopTime: 23:00:00
                 TimeZone: 1
         - Id: FRA
           Name: France
