Update deploy.yaml to initialize and update submodules during deployment

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,5 +27,6 @@ jobs:
             cd /usr/src/embassy-access/
             git stash
             git pull origin main --recurse-submodules
+            git submodule update --init --remote --recursive
             chmod +x /usr/src/embassy-access/.github/workflows/deploy.sh
             /usr/src/embassy-access/.github/workflows/deploy.sh
