--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -53,7 +53,7 @@ Worker:
               Tasks:
                 - Id: SA
                   Name: Search appointments
-                  Enabled: true
+                  Enabled: false
                   Duration: 00:01:00
               Schedule:
                 StartTime: 08:30:00
