--- a/src/embassy-access-modules/embassy-access-modules-russian-tests/embassy-access-modules-russian-tests.fsproj
+++ b/src/embassy-access-modules/embassy-access-modules-russian-tests/embassy-access-modules-russian-tests.fsproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
       <TargetFramework>net9.0</TargetFramework>
+    <Nullable>enable</Nullable>
       <OutputType>Exe</OutputType>
   </PropertyGroup>
 
