--- a/.gitmodules
+++ b/.gitmodules
@@ -5,7 +5,7 @@
 [submodule "submodules/fsharp-web"]
 	path = submodules/fsharp-web
 	url = https://github.com/masterlifting/fsharp-web.git
-	branch = dev
+	branch = feature/multilang
 [submodule "submodules/fsharp-persistence"]
 	path = submodules/fsharp-persistence
 	url = https://github.com/masterlifting/fsharp-persistence.git
